--- a/W200_Final_Exam.ipynb
+++ b/W200_Final_Exam.ipynb
@@ -119,7 +119,18 @@
     "id": "errKkCYQg7Td"
    },
    "source": [
-    "- c) Your answer here"
+    "- c) Your answer here\n",
+    "1. Check for missing values\n",
+    "\n",
+    "2. Validate data types\n",
+    "\n",
+    "3. Look for duplicates \n",
+    "\n",
+    "4. Check data ranges and distributions\n",
+    "\n",
+    "5. Preview data – Use .head(), .describe(), and .info() \n",
+    "\n",
+    "6. Inspect for obvious outliers or anomalies"
    ]
   },
   {
@@ -962,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 23,
    "metadata": {
     "id": "qPhDns3zg7Tr"
    },
@@ -972,8 +983,7 @@
      "output_type": "stream",
      "text": [
       "Columns found: ['GENE', 'MUTATION_ID', 'CHROMOSOME', 'POSITION', 'REFERENCE', 'ALTERNATE', 'CLNSIG', 'DISEASE']\n",
-      "\n",
-      "🧬 First 100 Harmful Mutations:\n",
+      "First 100 Harmful Mutations:\n",
       "   GENE MUTATION_ID CHROMOSOME POSITION                                                                                                                                                                                                                                                           REFERENCE ALTERNATE            CLNSIG                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      DISEASE\n",
       "  ISG15      183381          1  1014143                                                                                                                                                                                                                                                                   C         T        Pathogenic                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         Immunodeficiency_38_with_basal_ganglia_calcification\n",
       "  ISG15      161455          1  1014316                                                                                                                                                                                                                                                                   C        CG        Pathogenic                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         Immunodeficiency_38_with_basal_ganglia_calcification\n",
@@ -1089,7 +1099,6 @@
     "import pandas as pd\n",
     "\n",
     "def parse_clinvar_file(file_path):\n",
-    "    # Define harmful CLNSIG values (text-based, based on actual file content)\n",
     "    harmful_clnsig_values = {'Pathogenic', 'Likely_pathogenic'}\n",
     "\n",
     "    harmful_mutations = []\n",
@@ -1097,15 +1106,13 @@
     "    with open(file_path, 'r') as file:\n",
     "        for line in file:\n",
     "            if line.startswith('#'):\n",
-    "                continue  # Skip headers and metadata\n",
-    "\n",
+    "                continue  \n",
     "            fields = line.strip().split('\\t')\n",
     "            if len(fields) < 8:\n",
-    "                continue  # Skip malformed lines\n",
+    "                continue  \n",
     "\n",
     "            chrom, pos, mut_id, ref, alt, fltr, qual, info = fields\n",
     "\n",
-    "            # Parse INFO field into a dictionary\n",
     "            info_dict = {}\n",
     "            for entry in info.split(';'):\n",
     "                if '=' in entry:\n",
@@ -1114,11 +1121,9 @@
     "                else:\n",
     "                    info_dict[entry.strip()] = 'Not_Given'\n",
     "\n",
-    "            # Normalize CLNSIG value\n",
     "            clnsig_raw = info_dict.get('CLNSIG', 'Not_Given')\n",
     "            clnsig_clean = clnsig_raw.replace(' ', '_').strip()\n",
     "\n",
-    "            # Check if it's a harmful mutation\n",
     "            if clnsig_clean in harmful_clnsig_values:\n",
     "                gene_info = info_dict.get('GENEINFO', 'Not_Given')\n",
     "                gene_name = gene_info.split(':')[0] if gene_info != 'Not_Given' else 'Not_Given'\n",
@@ -1134,43 +1139,30 @@
     "                    'CLNSIG': clnsig_clean,\n",
     "                    'Disease': disease\n",
     "                })\n",
-    "\n",
-    "    # Create DataFrame\n",
     "    df = pd.DataFrame(harmful_mutations)\n",
     "\n",
-    "    # Normalize column names\n",
     "    df.columns = df.columns.astype(str).str.strip().str.upper()\n",
     "\n",
-    "    # Replace any remaining missing values with 'Not_Given'\n",
     "    df.fillna('Not_Given', inplace=True)\n",
-    "\n",
     "    return df\n",
     "\n",
-    "# === Main Execution ===\n",
-    "\n",
-    "# Set path to file (make sure this matches your environment)\n",
     "file_path = 'clinvar_final.txt'\n",
     "\n",
-    "# Parse the file\n",
     "harmful_df = parse_clinvar_file(file_path)\n",
     "\n",
-    "# Print column names to confirm\n",
     "print(\"Columns found:\", harmful_df.columns.tolist())\n",
     "\n",
-    "# Display the first 100 harmful mutations\n",
-    "print(\"\\n🧬 First 100 Harmful Mutations:\")\n",
+    "print(\"First 100 Harmful Mutations:\")\n",
     "print(harmful_df.head(100).to_string(index=False))\n",
     "\n",
-    "# Total harmful mutations\n",
     "total_harmful = len(harmful_df)\n",
     "print(f\"Total number of harmful mutations found: {total_harmful}\")\n",
     "\n",
-    "# CLNSIG value counts\n",
     "print(\"CLNSIG value counts:\")\n",
     "if 'CLNSIG' in harmful_df.columns:\n",
     "    print(harmful_df['CLNSIG'].value_counts(dropna=False))\n",
     "else:\n",
-    "    print(\"❌ 'CLNSIG' column not found.\")\n",
+    "    print(\"CLNSIG column not found.\")\n",
     "\n",
     "\n"
    ]
@@ -1181,7 +1173,23 @@
     "id": "QvWAQKYag7Tr"
    },
    "source": [
-    "4) Please Write your assumptions here:"
+    "4) Please Write your assumptions here:\n",
+    "\n",
+    "1. Harmful Mutation Definition\n",
+    "We define harmful mutations as those with a CLNSIG value of:\n",
+    "Likely pathogenic\n",
+    " Pathogenic\n",
+    "\n",
+    "2. Data Filtering\n",
+    "We ignore:\n",
+    "Header or metadata lines (starting with #)\n",
+    "Lines missing required fields or malformed.\n",
+    "Mutations without a valid CLNSIG field.\n",
+    "\n",
+    "3. Missing Values\n",
+    "If any field is missing, we replace it with the string 'Not_Given'.\n",
+    "\n",
+    "4. Mutation Representation\n"
    ]
   },
   {
@@ -1190,7 +1198,57 @@
     "id": "_r9uXf94g7Ts"
    },
    "source": [
-    "4) Findings / What would you present to your boss?"
+    "4) Findings / What would you present to your boss?\n",
+    "After processing the modified ClinVar dataset, I extracted and analyzed the most clinically significant genetic mutations. Here's a summary of what I would present:\n",
+    "\n",
+    "#### Key Insights:\n",
+    "We identified and filtered genetic mutations labeled as \"Pathogenic\" or \"Likely_pathogenic\", indicating high clinical concern.\n",
+    "\n",
+    "A total of  harmful mutations were found in the dataset.\n",
+    "Pathogenic           12313\n",
+    "Likely_pathogenic     6269\n",
+    "\n",
+    "The first 100 harmful mutations have been extracted and saved for immediate review.\n",
+    "\n",
+    "####  Mutation Details Provided:\n",
+    "For each harmful mutation, we extracted:\n",
+    "\n",
+    "Gene name\n",
+    "\n",
+    "Mutation ID\n",
+    "\n",
+    "Chromosome and position\n",
+    "\n",
+    "Reference\n",
+    "\n",
+    "Clinical significance (CLNSIG)\n",
+    "\n",
+    "Associated disease\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Data Quality & Validation:\n",
+    "All missing values were replaced with 'Not_Given' to ensure consistency.\n",
+    "\n",
+    "We verified that no rows contained null (NaN) values in the final output.\n",
+    "\n",
+    "We ran a value count on the CLNSIG field (including missing values) to validate correct parsing and to understand the classification distribution.\n",
+    "\n",
+    "\n",
+    "####  Deliverables:\n",
+    "harmful_mutations_first_100.csv: First 100 harmful mutations for review\n",
+    "\n",
+    "Summary statistics and CLNSIG breakdown available in notebook/logs\n",
+    "\n",
+    "####  Why This Matters:\n",
+    "This filtered and cleaned mutation dataset is ready for:\n",
+    "\n",
+    "Further analysis or integration into a healthcare diagnostics platform\n",
+    "\n",
+    "Use in reporting tools, dashboards, or AI models\n",
+    "\n",
+    "Immediate discussion with stakeholders about high-priority genetic markers\n",
+    "\n"
    ]
   }
  ],
